--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <a href="#" class="text-blue-600 font-medium">الرئيسية</a>
                     <a href="#" class="text-gray-700 hover:text-blue-600">عرض الوظائف</a>
                     <a href="available_employees.html" class="text-gray-700 hover:text-blue-600">عرض الموظفين</a>
-                    <a href="employee_registration.html" class="text-gray-700 hover:text-blue-600">إدخال الموظفين</a>
+                    <a href="employee_listing_page.html" class="text-gray-700 hover:text-blue-600">إدخال الموظفين</a>
                 </div>
 
                 <div class="hidden md:flex items-center space-x-4 rtl:space-x-reverse">
